--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "npm-run-all": "2.3.0",
     "nyc": "7.1.0",
     "rimraf": "2.5.4",
-    "semantic-release": "4.3.5",
+    "semantic-release": ">=17.2.3",
     "validate-commit-msg": "2.6.1"
   },
   "config": {
